lox-tests/tests/method/undefined_variable.stderr
ERROR: Undefined variable name 'bob'
 --> 3:1
  |
3 |     return this == bob;
  |                    ^-^
