lox-tests/tests/method/undefined_variable.lox
class Person {
  test() {
    return this == bob;
  }
}

var bob = Person();
bob.name = "Bob";

print bob.test();
